# wgpu-screenshot

./: BACKGROUND_CACHE_IMPLEMENTATION.md  CIRCLE_HANDLES_IMPROVEMENT.md  Cargo.toml  DRAWING_HANDLES_IMPLEMENTATION.md  DRAWING_HANDLES_USAGE.md  ELLIPSE_BOUNDARY_FIX.md  ELLIPSE_IMPLEMENTATION.md  HANDLE_FIXES_SUMMARY.md  IMPROVED_HANDLES_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  UNDO_REDO_IMPLEMENTATION.md  temp.rs
glyphon/examples/: custom-glyphs.rs  text-sizes.rs
src/: main.rs  shader.wgsl  text_renderer.rs
